# starctegic-architect

./: .gitignore  TECHNICAL_SPECS_V2_ENHANCED.md  docker-compose.yml
backend/: .env.example  Dockerfile  check_encodings.py  check_users.py  create_stratege.py  create_test_users.py  create_test_users.sql  create_test_users_simple.py  create_users.py  debug_crash.py  diag.txt  diag_import.py  diag_sqlalchemy.py  fix_imports.py  init_db.py  inspect_routes.py  pyproject.toml  quick_user.py  seed_log.txt  seed_raw.py  simple_seed.py  test_import.py  test_signup.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: admin.py  expert.py  login.py  payments.py  projects.py  reports.py  strategy.py  subscriptions.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  base_class.py  seed_data.py  session.py
backend/app/models/: meeting.py  notification.py  project.py  subscription.py  user.py
backend/app/rules/: base_rules.yaml  engine.py  questionnaire.json
backend/app/schemas/: project.py  subscription.py  user.py
backend/app/services/: ai_service.py  finance_service.py  notification_service.py  payment_service.py  report_service.py  validator_service.py
backend/app/templates/: report.html
